add filter (status+models)

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,11 @@
             <option>Model 2</option>
             <option>Model 3</option>
           </select>
-          <select class="p-2 rounded-md bg-neutral-100 w-[200px] text-neutral-950">
+          <select id="status" class="p-2 rounded-md bg-neutral-100 w-[200px] text-neutral-950">
             <option>Статус</option>
             <option>Доступен</option>
             <option>Арендован</option>
+            <option>На ремонте</option>
           </select>
         </div>
         <div id = "list-car" class="grid grid-cols-3 gap-6">
