--- a/templates/index2.html
+++ b/templates/index2.html
@@ -74,17 +74,14 @@
               <option>Казань</option>
             </select>
 
-            
             <input
-              type="text"
+              type="tel"
               id="phone-number"
-              class="p-2 rounded-md bg-neutral-100 text-neutral-950 w-[300px]"
-              placeholder="+7 (___) ___-__-__"
+              class="p-2 rounded-md bg-neutral-100 text-neutral-950"
+              placeholder="Введите номер телефона"
               required
-              maxlength="18"
+              pattern="^\+?[0-9\s\-]{10,15}$"
             />
-            
-
             <button class="mt-4 px-6 py-3 bg-blue-500 text-white rounded-md w-fit">
               Подтвердить заказ
             </button>
@@ -92,11 +89,9 @@
         </section>
       </main>
     </div>
-  <script src="{{ url_for('static', filename='scripts/main.js') }}"></script>
+  <script src="{{ url_for('static', filename='scripts/fetch-cars.js') }}"></script>
     
 
   </div>
   </body>
 </html>
-
-
